// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Base renders correctly 1`] = `
<Base
  menuData={
    Array [
      Object {
        "title": "Dashboard",
        "type": "link",
        "url": "/",
      },
      Object {
        "title": "List",
        "type": "link",
        "url": "/list",
      },
      Object {
        "items": Array [
          Object {
            "title": "Form Subitem",
            "type": "link",
            "url": "/form",
          },
          Object {
            "isDisabled": true,
            "title": "Form Subitem Disabled",
            "type": "link",
            "url": "/form",
          },
        ],
        "title": "Form",
        "type": "link",
        "url": "/form",
      },
      Object {
        "isDisabled": true,
        "title": "New portfolio",
        "type": "link",
        "url": "/portfolio",
      },
      Object {
        "type": "divider",
      },
      Object {
        "icon": <Memo(BugReportIcon) />,
        "title": "Report a bug",
        "type": "link",
        "url": "/bug",
      },
    ]
  }
  menuOpen={true}
  title="Foo"
>
  <div>
    Foo
  </div>
</Base>
`;

exports[`Base renders correctly without header 1`] = `
<Base
  hasHeader={false}
  menuData={
    Array [
      Object {
        "title": "Dashboard",
        "type": "link",
        "url": "/",
      },
      Object {
        "title": "List",
        "type": "link",
        "url": "/list",
      },
      Object {
        "items": Array [
          Object {
            "title": "Form Subitem",
            "type": "link",
            "url": "/form",
          },
          Object {
            "isDisabled": true,
            "title": "Form Subitem Disabled",
            "type": "link",
            "url": "/form",
          },
        ],
        "title": "Form",
        "type": "link",
        "url": "/form",
      },
      Object {
        "isDisabled": true,
        "title": "New portfolio",
        "type": "link",
        "url": "/portfolio",
      },
      Object {
        "type": "divider",
      },
      Object {
        "icon": <Memo(BugReportIcon) />,
        "title": "Report a bug",
        "type": "link",
        "url": "/bug",
      },
    ]
  }
  menuOpen={true}
  title="Foo"
>
  <div>
    Foo
  </div>
</Base>
`;

exports[`Base renders with drawer open 1`] = `
<Base
  hasHeader={false}
  menuData={
    Array [
      Object {
        "title": "Dashboard",
        "type": "link",
        "url": "/",
      },
      Object {
        "title": "List",
        "type": "link",
        "url": "/list",
      },
      Object {
        "items": Array [
          Object {
            "title": "Form Subitem",
            "type": "link",
            "url": "/form",
          },
          Object {
            "isDisabled": true,
            "title": "Form Subitem Disabled",
            "type": "link",
            "url": "/form",
          },
        ],
        "title": "Form",
        "type": "link",
        "url": "/form",
      },
      Object {
        "isDisabled": true,
        "title": "New portfolio",
        "type": "link",
        "url": "/portfolio",
      },
      Object {
        "type": "divider",
      },
      Object {
        "icon": <Memo(BugReportIcon) />,
        "title": "Report a bug",
        "type": "link",
        "url": "/bug",
      },
    ]
  }
  menuOpen={true}
  title="Foo"
>
  <div>
    Foo
  </div>
</Base>
`;
